--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "clipboard-copy": "^4.0.1",
     "marked": "^11.0.1",
+    "marked-react": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
