--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "clipboard-copy": "^4.0.1",
     "marked": "^11.0.1",
     "marked-react": "^2.0.0",
+    "minisearch": "^6.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
