--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,3 @@
-
 aiohttp==3.9.1
 aiosignal==1.3.1
 annotated-types==0.6.0
@@ -22,6 +21,7 @@ databases==0.8.0
 dataclasses-json==0.6.3
 Deprecated==1.2.14
 diskcache==5.6.3
+docx2txt==0.8
 emoji==2.9.0
 fastapi==0.104.1
 filelock==3.13.1
@@ -130,4 +130,3 @@ websockets==12.0
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.17.0
-
