--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.0.0
 aiohttp==3.9.1
 aiosignal==1.3.1
 annotated-types==0.6.0
@@ -19,10 +20,13 @@ coloredlogs==15.0.1
 cryptography==41.0.7
 databases==0.8.0
 dataclasses-json==0.6.3
+datasets==2.15.0
 Deprecated==1.2.14
+dill==0.3.7
 diskcache==5.6.3
 docx2txt==0.8
 emoji==2.9.0
+evaluate==0.4.1
 fastapi==0.104.1
 filelock==3.13.1
 filetype==1.2.0
@@ -56,12 +60,14 @@ mmh3==4.0.1
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.4
+multiprocess==0.70.15
 mypy-extensions==1.0.0
 networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.2
 oauthlib==3.2.2
 onnxruntime==1.16.3
+opencv-python==4.8.1.78
 opentelemetry-api==1.21.0
 opentelemetry-exporter-otlp-proto-common==1.21.0
 opentelemetry-exporter-otlp-proto-grpc==1.21.0
@@ -74,33 +80,45 @@ opentelemetry-semantic-conventions==0.42b0
 opentelemetry-util-http==0.42b0
 overrides==7.4.0
 packaging==23.2
+pandas==2.1.4
 pdfminer.six==20221105
 Pillow==10.1.0
 posthog==3.1.0
 protobuf==4.25.1
 pulsar-client==3.3.0
+pyarrow==14.0.2
+pyarrow-hotfix==0.6
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+pyclipper==1.3.0.post5
 pycparser==2.21
 pydantic==2.5.2
 pydantic_core==2.14.5
+pypdf==3.17.3
+PyPDF2==3.0.1
 PyPika==0.48.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-iso639==2023.6.15
 python-magic==0.4.27
 python-multipart==0.0.6
+pytz==2023.3.post1
 PyYAML==6.0.1
 rapidfuzz==3.5.2
+rapidocr-onnxruntime==1.3.8
 regex==2023.10.3
 requests==2.31.0
 requests-oauthlib==1.3.1
+responses==0.18.0
+rogue==0.0.2
+rouge-score==0.1.2
 rsa==4.9
 safetensors==0.4.1
 scikit-learn==1.3.2
 scipy==1.11.4
 sentence-transformers==2.2.2
 sentencepiece==0.1.99
+shapely==2.0.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
@@ -120,6 +138,7 @@ transformers==4.36.0
 typer==0.9.0
 typing-inspect==0.9.0
 typing_extensions==4.9.0
+tzdata==2023.3
 unstructured==0.11.2
 urllib3==1.26.18
 uvicorn==0.24.0.post1
@@ -128,5 +147,6 @@ watchfiles==0.21.0
 websocket-client==1.7.0
 websockets==12.0
 wrapt==1.16.0
+xxhash==3.4.1
 yarl==1.9.4
 zipp==3.17.0
